--- a/public/css/style.css
+++ b/public/css/style.css
@@ -771,7 +771,7 @@ h2 {
 
 	.main {
 		margin-top: 5rem;
-		margin-bottom: 0;
+		margin-bottom: 7.5rem;
 		justify-content: center;
 		flex-direction: column-reverse;
 	}
