--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header";
 import Main from "../components/Main";
 import Work from "../components/Work";
+import About from "../components/About";
 import Proficiencies from "../components/Proficiencies";
 import Contact from "../components/Contact";
 import Footer from "../components/Footer";
@@ -12,6 +13,7 @@ import Footer from "../components/Footer";
   <Header />
   <Main />
   <Work />
+  <About />
   <Proficiencies />
   <Contact />
   <Footer />
