statically serve netlify form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Main from "../components/Main";
 import Work from "../components/Work";
 import About from "../components/About";
 import Proficiencies from "../components/Proficiencies";
-import Contact from "../components/Contact";
+import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer";
 ---
 
