--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header";
 import Main from "../components/Main";
-import Work from "../components/Work";
-import About from "../components/About";
-import Proficiencies from "../components/Proficiencies";
+import Work from "../components/Work.astro";
+import About from "../components/About.astro";
+import Skills from "../components/Skills.astro";
 import Contact from "../components/Contact.astro";
-import Footer from "../components/Footer";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Porfolio Landing Page">
@@ -14,7 +14,7 @@ import Footer from "../components/Footer";
   <Main />
   <Work />
   <About />
-  <Proficiencies />
+  <Skills />
   <Contact />
   <Footer />
 </Layout>
