--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -17,7 +17,7 @@ import Image from './Image';
 				would love to connect with you on
 				<a
 					class='gradient-text gradient-link'
-					href='https://twitter.com/BrianSchneeDev'
+					href='https://twitter.com/fullstackbrian'
 				>
 					{' '}
 					Twitter{' '}
