--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -41,7 +41,7 @@ import Image from './Image';
 			/>
 			<h3 class='about-image-title'>Brian Schnee</h3>
 			<div class='logos'>
-				<a href='https://twitter.com/BrianSchneeDev'>
+				<a href='https://twitter.com/fullstackbrian'>
 					<Image
 						className='logo'
 						src='assets/logos/twitter.png'
