--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -17,7 +17,7 @@ import Image from './Image';
 				would love to connect with you on
 				<a
 					class='gradient-text gradient-link'
-					href='https://twitter.com/fullstackbrian'
+					href='https://twitter.com/schneedotdev'
 				>
 					{' '}
 					Twitter{' '}
@@ -25,7 +25,7 @@ import Image from './Image';
 				or
 				<a
 					class='gradient-text gradient-link'
-					href='https://www.linkedin.com/in/brian-schnee-dev/'
+					href='https://www.linkedin.com/in/schneedotdev/'
 				>
 					{' '}
 					LinkedIn
@@ -41,21 +41,21 @@ import Image from './Image';
 			/>
 			<h3 class='about-image-title'>Brian Schnee</h3>
 			<div class='logos'>
-				<a href='https://twitter.com/fullstackbrian'>
+				<a href='https://twitter.com/schneedotdev'>
 					<Image
 						className='logo'
 						src='assets/logos/twitter.png'
 						alt='twitter logo'
 					/>
 				</a>
-				<a href='https://www.linkedin.com/in/brian-schnee-dev/'>
+				<a href='https://www.linkedin.com/in/schneedotdev/'>
 					<Image
 						className='logo'
 						src='assets/logos/linkedin.png'
 						alt='linkedIn logo'
 					/>
 				</a>
-				<a href='https://github.com/brianschnee?tab=overview&from=2022-02-01&to=2022-02-11'>
+				<a href='https://github.com/schneedotdev?tab=overview&from=2022-02-01&to=2022-02-11'>
 					<Image
 						className='logo'
 						src='assets/logos/github.png'
