--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -9,7 +9,7 @@
 				how I can help you! I will respond to your message as soon as
 				possible. For general inquiries, you may use this form or contact me
 				via
-				<a href='https://twitter.com/fullstackbrian'>
+				<a href='https://twitter.com/schneedotdev'>
 					<span class='gradient-text gradient-link'> Twitter</span>
 				</a>
 				. Thank you!
