--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -17,7 +17,7 @@ import Image from './Image';
 					</a>
 					<a
 						class='overlay-button green'
-						href='https://github.com/brianschnee/climbers-connect'
+						href='https://github.com/schneedotdev/climbers-connect'
 						target='_blank'
 					>
 						<span>GitHub</span>
@@ -41,7 +41,7 @@ import Image from './Image';
 					</a>
 					<a
 						class='overlay-button green'
-						href='https://github.com/brianschnee/find-a-dev'
+						href='https://github.com/schneedotdev/find-a-dev'
 						target='_blank'
 					>
 						<span>GitHub</span>
@@ -91,7 +91,7 @@ import Image from './Image';
 					</a>
 					<a
 						class='overlay-button green'
-						href='https://github.com/brianschnee/attrienterprises-optimized'
+						href='https://github.com/schneedotdev/attrienterprises-optimized'
 						target='_blank'
 					>
 						<span>GitHub</span>
@@ -99,7 +99,7 @@ import Image from './Image';
 				</div>
 				<Image
 					className='project'
-					src='https://raw.githubusercontent.com/brianschnee/attri-enterprises/main/attri-preview.gif'
+					src='https://raw.githubusercontent.com/schneedotdev/attri-enterprises/main/attri-preview.gif'
 					alt='Attri Enterprises Website'
 				/>
 			</div>
@@ -108,14 +108,14 @@ import Image from './Image';
 					<h4 class='overlay-title'>Personal Portfolio</h4>
 					<a
 						class='overlay-button'
-						href='https://brianschnee.com'
+						href='https://schneedotdev.com'
 						target='_blank'
 					>
 						<span>Website</span>
 					</a>
 					<a
 						class='overlay-button green'
-						href='https://github.com/brianschnee/portfolio-optimized'
+						href='https://github.com/schneedotdev/portfolio-optimized'
 						target='_blank'
 					>
 						<span>GitHub</span>
