--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
 		Codebase produced and built by{' '}
 		<a
 			class='author gradient-text gradient-link'
-			href='https://twitter.com/fullstackbrian'
+			href='https://twitter.com/schneedotdev'
 		>
 			<span>Brian Schnee</span>
 		</a>
