--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -84,7 +84,7 @@ import Image from './Image';
 					<h4 class='overlay-title'>Attri Enterprises</h4>
 					<a
 						class='overlay-button'
-						href='https://attrienterprises.vercell.app/'
+						href='https://attrienterprises.vercel.app/'
 						target='_blank'
 					>
 						<span>Website</span>
